// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Render must match dismissable() 1`] = `
<div>
  <div
    class="p-1"
  >
    <div
      class="Toast"
    >
      <span
        class="Toast-icon"
      >
        <svg
          aria-hidden="true"
          class="octicon"
          height="16"
          role="img"
          style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm6.5-.25A.75.75 0 0 1 7.25 7h1a.75.75 0 0 1 .75.75v2.75h.25a.75.75 0 0 1 0 1.5h-2a.75.75 0 0 1 0-1.5h.25v-2h-.25a.75.75 0 0 1-.75-.75zM8 6a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="Toast-content"
      >
        This toast is dismissable.
      </span>
      <button
        class="Toast-dismissButton"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="octicon"
          height="16"
          role="img"
          style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.72 3.72a.75.75 0 0 1 1.06 0L8 6.94l3.22-3.22a.75.75 0 1 1 1.06 1.06L9.06 8l3.22 3.22a.75.75 0 1 1-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 0 1-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 0 1 0-1.06z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Button /> Render must match error() 1`] = `
<div>
  <div
    class="p-1"
  >
    <div
      class="Toast Toast--error"
    >
      <span
        class="Toast-icon"
      >
        <svg
          aria-hidden="true"
          class="octicon"
          height="16"
          role="img"
          style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.47.22A.75.75 0 0 1 5 0h6a.75.75 0 0 1 .53.22l4.25 4.25c.141.14.22.331.22.53v6a.75.75 0 0 1-.22.53l-4.25 4.25A.75.75 0 0 1 11 16H5a.75.75 0 0 1-.53-.22L.22 11.53A.75.75 0 0 1 0 11V5a.75.75 0 0 1 .22-.53L4.47.22zm.84 1.28L1.5 5.31v5.38l3.81 3.81h5.38l3.81-3.81V5.31L10.69 1.5H5.31zM8 4a.75.75 0 0 1 .75.75v3.5a.75.75 0 0 1-1.5 0v-3.5A.75.75 0 0 1 8 4zm0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="Toast-content"
      >
        Error message goes here
      </span>
    </div>
  </div>
</div>
`;

exports[`<Button /> Render must match info() 1`] = `
<div>
  <div
    class="p-1"
  >
    <div
      class="Toast"
    >
      <span
        class="Toast-icon"
      >
        <svg
          aria-hidden="true"
          class="octicon"
          height="16"
          role="img"
          style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm6.5-.25A.75.75 0 0 1 7.25 7h1a.75.75 0 0 1 .75.75v2.75h.25a.75.75 0 0 1 0 1.5h-2a.75.75 0 0 1 0-1.5h.25v-2h-.25a.75.75 0 0 1-.75-.75zM8 6a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="Toast-content"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.Aenean massa. Cum sociis natoquepenatibus et ma
      </span>
    </div>
  </div>
</div>
`;

exports[`<Button /> Render must match success() 1`] = `
<div>
  <div
    class="p-1"
  >
    <div
      class="Toast Toast--success"
    >
      <span
        class="Toast-icon"
      >
        <svg
          aria-hidden="true"
          class="octicon"
          height="16"
          role="img"
          style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.75.75 0 0 1 1.06-1.06L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="Toast-content"
      >
        Success message goes here
      </span>
    </div>
  </div>
</div>
`;

exports[`<Button /> Render must match warning() 1`] = `
<div>
  <div
    class="p-1"
  >
    <div
      class="Toast Toast--warning"
    >
      <span
        class="Toast-icon"
      >
        <svg
          aria-hidden="true"
          class="octicon"
          height="16"
          role="img"
          style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.22 1.754a.25.25 0 0 0-.44 0L1.698 13.132a.25.25 0 0 0 .22.368h12.164a.25.25 0 0 0 .22-.368L8.22 1.754zm-1.763-.707c.659-1.234 2.427-1.234 3.086 0l6.082 11.378A1.75 1.75 0 0 1 14.082 15H1.918a1.75 1.75 0 0 1-1.543-2.575L6.457 1.047zM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-.25-5.25a.75.75 0 0 0-1.5 0v2.5a.75.75 0 0 0 1.5 0v-2.5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="Toast-content"
      >
        Warning message goes here
      </span>
    </div>
  </div>
</div>
`;
